Project app_submission {
  database_type: 'PostgreSQL'
  Note: '''
    # LifeAI App Submission Database
  '''
}   

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  address_id bigint [ref: > AD.id]
  agency varchar 
  app_contact varchar
  app_contact_email varchar
  password_changed_at timestamptz [not null, default: '0001-01-01']
  created_at timestamptz [not null, default: `now()`]
}

Table api_accounts as ACT {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  is_active boolean [not null, default: true]
  is_auto_renewal boolean [not null, default: false]
  service_type varchar [not null, default: 'ICD', note: 'ICD|ICD_PRO|APS|APS_TXT|ALL'] 
  plan_name varchar [not null, default: 'DEMO', note: 'DEMO|BASIC|PRO']
  credit_balance bigint [not null]
  active_at timestamptz [not null, default: `now()`]
  last_use_at timestamptz [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    username
    (username, is_active)
    (username, is_active, service_type) [unique]
  }
}

Table clients as C {
  id bigserial [pk]
  agent varchar [ref: > U.username, not null]
  full_name varchar [not null]
  address_id bigint [ref: > AD.id]
  birth_date timestamptz [not null]
  driver_license_number varchar
  driver_license_state varchar
  email varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    agent
    (agent, full_name)
    (agent, birth_date)
    (agent, driver_license_number)
  }
}

Table addresses as AD {
  id bigserial [pk]
  address_line1 varchar [not null]
  address_line2 varchar
  city varchar [not null]
  state varchar [not null]
  zip_code varchar [not null]
  country varchar [not null, default: 'US']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    address_line1
    zip_code
  }
}

Table applications as A {
  id bigserial [pk]
  agent varchar [ref: > U.username, not null]
  is_formal boolean [not null]
  is_1035_exchange boolean
  primary_insured_id bigint [ref: > C.id, not null]
  joint_insured_id bigint [ref: > C.id]
  carriers varchar [not null]
  product_type varchar [not null, note: 'non carrier-specific product type']
  applied_amount bigint [not null]
  created_at timestamptz [not null, default: `now()`]
  
  Indexes {
    agent
    (agent, primary_insured_id)
    (agent, joint_insured_id)
  }
}


Table documents {
  id bigserial [pk]
  application_id bigint [ref: > A.id, not null]
  client_id bigint [ref: > C.id, not null]
  doc_type varchar [not null]
  file_name varchar [not null]
  file_size varchar [not null]
  file_type varchar [not null]
  s3_url varchar [not null, note: 's3 bucket url']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    application_id
    (application_id, file_name)
  }
}

// Table transfers {
//   id bigserial [pk]
//   from_account_id bigint [ref: > A.id, not null]
//   to_account_id bigint [ref: > A.id, not null]
//   amount bigint [not null, note: 'must be positive']
//   created_at timestamptz [not null, default: `now()`]
  
//   Indexes {
//     from_account_id
//     to_account_id
//     (from_account_id, to_account_id)
//   }
// }

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    username
    (username, refresh_token) [unique]
  }
}

// Table sessions {
//   id uuid [pk] [default: `uuid_generate_v4()`]
//   username varchar [ref: > U.username, not null]
//   refresh_token varchar [not null]
//   is_blocked boolean [not null, default: true]
//   expires_at timestamptz [not null]
//   created_at timestamptz [not null, default: `now()`]
// }
